# Dimnetria

./: .gitignore  CHANGELOG.md  Dimnetria_genesis.md  PRODUCT_DOC.md  README.md  SCENARIO_LAYER_COMPARE_SPEC.md  TECH_SPEC.md  pyproject.toml
app/: dashboard.py  data.py  ingestion.py  main.py  models.py  scoring.py  storage.py
app/static/: index.html
docs/root-docs/: ANALYST_DESK_SPEC.md  CHANGELOG.md  README.md  TECH_SPEC.md
scripts/: build_tiles.py
tests/: test_api.py  test_scoring.py
tiles_cache/: country_layer_baseline.json
